--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.0",
     "@prisma/client": "5.18.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -22,6 +23,7 @@
     "lint-staged": "15.2.9",
     "lucide-react": "0.427.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
